<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.historichologram.macmusicplayer.MainActivity">

    <LinearLayout
        android:id="@+id/control_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/nav_button_color">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:src="@drawable/back_button"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:src="@drawable/play_button"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:src="@drawable/pause_button"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:src="@drawable/forward_button"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/control_buttons"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/artist_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/list_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist_item1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                style="@style/list_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist_item2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                style="@style/list_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist_item3" />
        </LinearLayout>

    </ScrollView>

    <TextView
        style="@style/list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_above="@id/control_buttons"
        android:text="@string/artist_explanation" />
</RelativeLayout>